--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 	<p>Day1: Creating the repo, sign up and symbolically uploading the index file for ZTM coding_challenge-25</p>
 	<p>Day2: Planing the project for the rest of the month (because it supose not passing 30 days), making skatches, planing the structure and make some research.(didn't made as much as I wish for today)</p>
+	<p>Day3: Building the main structure of the website and sketched a logo</p>
 
 
 	<p>P.S. I will upload my progress here everyday and on the 30th day I will upload the entire project.</p>
