--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<p>Day2: Planing the project for the rest of the month (because it supose not passing 30 days), making skatches, planing the structure and make some research.(didn't made as much as I wish for today)</p>
 	<p>Day3: Building the main structure of the website and sketched a logo</p>
 	<p>Day4: Made some functionalities and test them. Not very happy with the result but I will continue tomorrow.</p>
+	<p>Day5: The work for day 5 it will made after 00:00  local hour, but I want to be considered that I worked for day 5 today, not tomorow. I am planning to work around with functionalities from yesterday with I'm not happy and add some extra including fetching some videos on my page.Wish me good luck with that. I have no Ideea how to do that in react.</p>
 
 
 	<p>P.S. I will upload my progress here everyday and on the 30th day I will upload the entire project.</p>
