--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<p>Day5: The work for day 5 it will made after 00:00  local hour, but I want to be considered that I worked for day 5 today, not tomorow. I am planning to work around with functionalities from yesterday with I'm not happy and add some extra including fetching some videos on my page.Wish me good luck with that. I have no Ideea how to do that in react.</p>
 	<p>Day6: Very happy about my yesterday work. I succeeded to get video content on my site. I know it's not big deal but it's a progress for me. I still have to work on it because there are not looking as I wish but at least now I have something to show at the end of #30dayChallenge
     For today I am planning to try improving what I've described above, and make a database for movies, divided into categories, with some description, and if I will work fast, maybe I will create the sign up form.</p>
+    <p>Day7: with 2 days delay. Partially succeded to bring some video content on my page throught API. No big progrees for project but a big progress for my knowledges. </p>
 
 
 	<p>P.S. I will upload my progress here everyday and on the 30th day I will upload the entire project.</p>
