--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     For today I am planning to try improving what I've described above, and make a database for movies, divided into categories, with some description, and if I will work fast, maybe I will create the sign up form.</p>
     <p>Day7: with 2 days delay. Partially succeded to bring some video content on my page throught API. No big progrees for project but a big progress for my knowledges. </p>
     <p>Day8: Finaly succeded to bring video content on my page exclusively through API</p>
+    <p>Day9++: I have worked in the last days at my project a little bit every day but I forgot to update the GIT status.So in the last days I succeded to finish the trailer component, to implement a carousel component and to display the content through it </p>
 
 
 	<p>P.S. I will upload my progress here everyday and on the 30th day I will upload the entire project.</p>
